--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -50,6 +50,14 @@
         }
       }
 
+      .main-description {
+        margin: 15px 0 0;
+        font-family: @pxl-text-font;
+        font-size: @font-size-base;
+        color: @text-color;
+        line-height: 1;
+      }
+
       .course-subject {
         // fachgebiet title
         h2 {
