- Line height und font weight HFH Segment page

--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -16060,10 +16060,10 @@ body.excollege_section .view.view-courses .view-content .panel-group .main-title
 }
 .view.view-courses .view-content .panel-group .main-description {
   margin: 15px 0 0;
-  font-family: 'SohoGothicProRegular', serif;
+  font-family: 'SohoGothicProLight', serif;
   font-size: 16px;
   color: #333333;
-  line-height: 1.2;
+  line-height: 1.4;
 }
 .view.view-courses .view-content .panel-group .course-subject h2 {
   margin: 15px 0 0;
