--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -52,10 +52,10 @@
 
       .main-description {
         margin: 15px 0 0;
-        font-family: @pxl-text-font;
+        font-family: @pxl-text-font-light;
         font-size: @font-size-base;
         color: @text-color;
-        line-height: 1.2;
+        line-height: 1.4;
       }
 
       .course-subject {
