--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -28,6 +28,7 @@
 @import "node-video";
 @import "node-tweet";
 @import "node-facebook";
+@import "node-instagram";
 @import "node-remoteform";
 
 // views
