--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -13,6 +13,65 @@
 
 // General settings
 // -------------------------
+
+.view.view-course-times.view-display-id-page_info_events {
+  .view-header,
+  .view-filters {
+    padding: 15px 0 30px;
+  }
+
+  .view-content {
+    // course times table
+    padding: 0;
+
+    table {
+      tbody {
+        tr {
+          td {
+            &.views-field-field-course-date {
+              white-space: nowrap;
+              line-height: 25px;
+            }
+
+            &.views-field-field-address {
+              min-width: 250px;
+              width: 25%;
+              text-align: left;
+            }
+
+            &.views-field-body {
+              min-width: 250px;
+              width: 25%;
+              p {
+                font-size: @table-font-size;
+              }
+            }
+
+            &.views-field-field-brand {
+              text-align: center;
+
+              img {
+                height: 30px;
+              }
+            }
+
+            &.views-field-nothing {
+              text-align: right;
+
+              a {
+                #pxl-mixins.button-normal;
+                display: inline-block;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+}
+
+
 .view.view-course-times,
 .view.view-course-times-search {
   .view-header {
@@ -30,7 +89,7 @@
   }
 
   .view-filters {
-    padding: 0 15px;
+    padding: 0 15px 15px;
     .views-exposed-form {
       .views-exposed-widget {
         label {
