--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -30,6 +30,7 @@
 @import "node-facebook";
 @import "node-instagram";
 @import "node-remoteform";
+@import "node-segment-block";
 
 // views
 @import "view-banners";
