--- a/all/themes/pixelgarage/less/pxlComponents/block-socials.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-socials.less
@@ -143,6 +143,9 @@
       &.follow-link-xing:before {
         content: "\f168";
       }
+      &.follow-link-instagram:before {
+        content: "\f16d";
+      }
       &.follow-link-linkedin:before {
         content: "\f0e1";
       }
