- Fax Icon ausgeblendet (display: none auf Zeile 152 im view-location.less)

--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -16337,7 +16337,7 @@ body.excollege_section .view.view-segment-pages .view-content .views-row a:focus
   background: url(../images/contact_icon_tel.svg) no-repeat top left / contain;
 }
 .view-locations.view-display-id-block .view-content .views-bootstrap-tab-plugin-style .tab-content .tab-pane .views-field-field-address .field-content .phone-number .icon-fax {
-  display: inline-block;
+  display: none;
   width: 18px;
   height: 21px;
   background: url(../images/contact_icon_fax.svg) no-repeat top left / contain;
