--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -149,7 +149,7 @@
                   background: url(../images/contact_icon_tel.svg) no-repeat top left/contain;
                 }
                 .icon-fax {
-                  display: inline-block;
+                  display: none;
                   width: 18px;
                   height: 21px;
                   background: url(../images/contact_icon_fax.svg) no-repeat top left/contain;
