- anmeldung/importer module changes for refactoring - styling adaptations for refactoring

--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -10258,9 +10258,6 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
   width: 100%;
 }
 @media screen and (min-width: 480px) {
-  .region-navigation .block-exposed-form-search-course-times {
-    bottom: 54px;
-  }
 }
 .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .btn-modal-search-form {
   display: none;
@@ -10293,6 +10290,7 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
   border-radius: 0;
   border-bottom-left-radius: 3px;
   border-top-left-radius: 3px;
+  border: 1px solid #c9c9c9;
   background: #fff none;
 }
 .region-navigation .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .btn-modal-search-form span.button-search {
@@ -10303,6 +10301,7 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
   border-radius: 0;
   border-bottom-right-radius: 3px;
   border-top-right-radius: 3px;
+  border: 1px solid #ff535d;
   background: #ff535d none;
 }
 .region-navigation .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .views-exposed-form {
@@ -10329,7 +10328,6 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
     display: inline-block;
     margin: 0 -3px 0 -1px;
     vertical-align: top;
-    border-left: 1px solid #c9c9c9;
   }
 }
 .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .views-exposed-form .views-exposed-widgets .views-exposed-widget label {
@@ -10376,7 +10374,6 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;
-    border: 1px solid rgba(0, 0, 0, 0);
   }
 }
 .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .views-exposed-form .views-exposed-widgets .views-exposed-widget .views-widget .form-item .form-control:focus {
@@ -10409,7 +10406,6 @@ body.modal-open #modal-exposed-search-form .modal-dialog .modal-content .modal-b
 }
 .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .views-exposed-form .views-exposed-widgets .views-exposed-widget.views-widget-filter-combine {
   width: 90%;
-  border: none;
 }
 @media screen and (min-width: 640px) {
   .block-exposed-form-search-course-times form#views-exposed-form-course-times-search-page-search-course-times .views-exposed-form .views-exposed-widgets .views-exposed-widget.views-widget-filter-combine {
@@ -15558,6 +15554,9 @@ body.excollege_section .node.node-course .row .col-sm-12 .field-name-body a:focu
 /*
  *  Banners view (navigation)
  * --------------------------------------------------*/
+.view-banners {
+  padding-bottom: 90px;
+}
 .view-banners .view-content .carousel {
   position: relative;
   margin: 0;
@@ -16906,32 +16905,71 @@ body.excollege_section .view.view-courses .view-content .panel-group .panel .pan
 .view.view-course-times.view-display-id-page_info_events .view-content {
   padding: 0;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-field-course-date {
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs {
+  margin: 0 0 -1px;
+  padding: 2px 2px 0;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  border: 1px solid #ddd;
+  border-bottom: none;
+  background-color: #ebebeb;
+}
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs > li {
+  display: inline-block;
+  float: none;
+  margin: 0 -2px -1px 0;
+}
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs > li a {
+  margin: 0;
+  padding: 10px 15px;
+  color: #777777;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  border-right: 1px solid #ddd;
+  background-color: #ebebeb;
+}
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs > li:last-child a {
+  border-right: transparent;
+}
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs > li.active a,
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs > li:hover a,
+.view.view-course-times.view-display-id-page_info_events .view-content ul.nav-tabs > li:focus a {
+  color: #333333;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content {
+  border: 1px solid #ddd;
+  border-top: none;
+}
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-field-course-date {
   white-space: nowrap;
   line-height: 25px;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-field-address {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-field-address {
   min-width: 250px;
   width: 25%;
   text-align: left;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-body {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-body {
   min-width: 250px;
   width: 25%;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-body p {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-body p {
   font-size: 15px;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-field-brand {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-field-brand {
   text-align: center;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-field-brand img {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-field-brand img {
   height: 30px;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-nothing {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-nothing {
   text-align: right;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-nothing a {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-nothing a {
   display: block;
   margin: 0 auto;
   padding: 8px 0 10px;
@@ -16952,7 +16990,7 @@ body.excollege_section .view.view-courses .view-content .panel-group .panel .pan
   background: #ff535d;
   display: inline-block;
 }
-.view.view-course-times.view-display-id-page_info_events .view-content table tbody tr td.views-field-nothing a:hover {
+.view.view-course-times.view-display-id-page_info_events .view-content .tab-content .tab-pane table tbody tr td.views-field-nothing a:hover {
   background: #ff757d;
 }
 .view.view-course-times .view-header,
@@ -17067,12 +17105,11 @@ body.excollege_section .view.view-course-times-search .view-filters .views-expos
 .view.view-course-times .view-content table caption,
 .view.view-course-times-search .view-content table caption {
   margin: 15px 0 0;
-  padding: 20px 0 24px;
+  padding: 20px 20px 24px;
   font-family: 'SohoGothicProMedium', serif;
   font-size: 18px;
   color: #333333;
   line-height: 1;
-  border-top: 1px solid #c9c9c9;
 }
 .view.view-course-times .view-content table thead tr th,
 .view.view-course-times-search .view-content table thead tr th {
