--- a/all/themes/pixelgarage/less/pxlComponents/view-banners.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-banners.less
@@ -14,6 +14,8 @@
 // Main settings
 // -------------------------
 .view-banners {
+  padding-bottom: 90px;
+
   .view-content {
     .carousel {
       position: relative;
