--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -23,44 +23,54 @@
   .view-content {
     // course times table
     padding: 0;
+    ul.nav-tabs {
+      .responsive-nav-tabs();
+    }
 
-    table {
-      tbody {
-        tr {
-          td {
-            &.views-field-field-course-date {
-              white-space: nowrap;
-              line-height: 25px;
-            }
+    .tab-content {
+      border: 1px solid @pxl-color-border;
+      border-top: none;
 
-            &.views-field-field-address {
-              min-width: 250px;
-              width: 25%;
-              text-align: left;
-            }
+      .tab-pane {
+        table {
+          tbody {
+            tr {
+              td {
+                &.views-field-field-course-date {
+                  white-space: nowrap;
+                  line-height: 25px;
+                }
 
-            &.views-field-body {
-              min-width: 250px;
-              width: 25%;
-              p {
-                font-size: @table-font-size;
-              }
-            }
+                &.views-field-field-address {
+                  min-width: 250px;
+                  width: 25%;
+                  text-align: left;
+                }
 
-            &.views-field-field-brand {
-              text-align: center;
+                &.views-field-body {
+                  min-width: 250px;
+                  width: 25%;
+                  p {
+                    font-size: @table-font-size;
+                  }
+                }
 
-              img {
-                height: 30px;
-              }
-            }
+                &.views-field-field-brand {
+                  text-align: center;
 
-            &.views-field-nothing {
-              text-align: right;
+                  img {
+                    height: 30px;
+                  }
+                }
 
-              a {
-                #pxl-mixins.button-normal;
-                display: inline-block;
+                &.views-field-nothing {
+                  text-align: right;
+
+                  a {
+                    #pxl-mixins.button-normal;
+                    display: inline-block;
+                  }
+                }
               }
             }
           }
@@ -168,12 +178,12 @@
       caption {
         // Header for grouped tables
         margin: 15px 0 0;
-        padding: 20px 0 24px;
+        padding: 20px 20px 24px;
         font-family: @pxl-text-font-medium;
         font-size: @font-size-base + 2;
         color: @text-color;
         line-height: 1;
-        border-top: 1px solid @pxl-border-color;
+        //border-top: 1px solid @pxl-border-color;
       }
 
       thead {
